rust/transpiler/tests/errors/nested_unclosed_for.hyper
<div>
    if show:
        for item in items:
            <span>{item}</span>
        # Missing end for for loop
    end
</div>
