rust/transpiler/tests/errors/nested_unclosed_for.expected.err

 file: nested_unclosed_for.hyper:2:5
error: This 'if' block is never closed.
 2 |     if show:
   |     ^^^^^^^^ opened here

 help: Close with 'end'

